style.css
html {
    font-size: 62.5%;
}

:root {
    --hightlight: #d025ff;
    --deep-pool: #383476;
    --deep-shade: #2b27605f;
}

body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 2rem;
    border: none;
    margin: 0px;
    background-color: var(--deep-pool);
}

h1 {
    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
    font-weight: normal;
    font-size: 15rem;
}

h2 {
    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
    text-indent: 60px;
    font-size: 4rem;
}

p {
    text-indent: 30px;
}

button {
    background-color: var(--hightlight);
    border: none;
    border-radius: 5px;
    padding: 10px;
    font-size: 2rem;
    color: white;
}

header {
    background-image: linear-gradient(to bottom, var(--deep-pool), #00000000);
    margin-bottom: 30px;
    color: white;
    padding: 10px;
    padding-bottom: 25px;
    margin-top: -2px;
    text-align: center;
    transform: translateZ(0);
}

header.fixed {
    z-index: 1000;
    background-color: white;
    background-image: none;
    color: black;
    position: sticky;
    top: 0;
    padding-bottom: 10px;
    box-shadow: 0px 10px 15px var(--deep-shade);
}

header nav {
    display: flex;
    width: 60%;
}

header nav a {
    transform: translateZ(0);
    margin: 20px;
    margin-top: 10px;
}

.content {
    padding: 80px;
    background-color: white;
}

.centered {
    text-align: center;
}

.aligned_right {
    text-align: right;
}

.parallax {
    perspective: 1px;
    height: 100vh;
    overflow-y: auto;
    overflow-x: hidden;
}

.parallax__layer {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.parallax__layer--base {
    top: 125vh;
    transform: translateZ(0);
}

.parallax__layer--back {
    transform: translateZ(-1px) scale(2);
    margin-left: 80px;
    margin-top: 100px;
    color: white;
}

.parallax__layer--deep {
    left: 0px;
    transform: translateZ(-2px) scale(3);
}

.parallax__layer--deep img {
    width: 100%;
    margin: 0;
    margin-left: -8px;
    margin-top: -100px;
    opacity: 0.5;
}

.part {
    margin-bottom: 50px;
}

.important {
    margin: 250px;
    box-shadow: 5px 10px 10px var(--deep-shade);
}

.download {
    border-radius: 15px;
    max-width: 20%;
}

.download img {
    border-radius: 20px;
    margin: -5px;
    margin-left: 20px;
}

